.codegen/gateway/gloo-edge/gateway.yaml
---
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy
  namespace: nukleros-gateway-system # +operator-builder:field:name=namespace,default="nukleros-gateway-system",type=string
  labels:
    app: gloo
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway: {}
  useProxyProto: false
  ssl: false
  options:
    accessLoggingService:
      accessLog:
      - fileSink:
          path: /dev/stdout
          stringFormat: ""
  proxyNames:
  - gateway-proxy
